--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -45,6 +45,7 @@
                         <div class="blue"></div>
                     </div>
                 </div>
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <input type="submit" value="Create Account">
             </form>
             <!-- Add external sign ups? -->
