--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -7,7 +7,7 @@
         <div class="hero-image">
             <section class="call-to-action">
                 <h3>Looking to learn codding?</h3>
-                <p>Start Here, Start Now</p>
+                <small>Start Here, Start Now</small>
                 <a href="/signup" class="btn">Create an account</a>
             </section>
         </div>
