--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,8 @@ pre, code, .code {
     margin-bottom: 0;
 }
 body {
+    background-image: linear-gradient(45deg, gray, lightgray, white, lightgray, gray);
+    background-attachment: fixed;
     margin: 0;
 }
 main {
@@ -37,6 +39,72 @@ main {
 }
 img {
     max-width: 100%;
+}
+.notif {
+    top: 80px;
+    display: grid;
+    width: max-content;
+    padding: 0.5rem 1rem;
+    box-shadow: inset 0 0 5px var(--accent2-color), 2px 2px 8px var(--accent2-color);
+    grid-template-columns: 2em auto 2em;
+    background-color: var(--primary-color);
+    transform: translate(-50%, 0);
+    max-width: calc(90% - 2rem);
+    animation: notif-in 1s;
+    grid-column-gap: 10px;
+    align-items: center;
+    border-radius: 5px;
+    position: fixed;
+    z-index: 900;
+    left: 50%;
+}
+.notif > *:not(.close):hover {
+    cursor: default;
+}
+.notif.success {
+    box-shadow: inset 0 0 5px forestgreen, 2px 2px 8px var(--accent2-color);
+    background-color: lightgreen;
+}
+.notif.error {
+    box-shadow: inset 0 0 5px red, 2px 2px 8px var(--accent2-color);
+    background-color: tomato;
+}
+.notif .close {
+    padding: 0.3rem;
+    line-height: 17px;
+    font-size: 1.74rem;
+    border-radius: 20px;
+    color: black;
+    height: 16px;
+    width: 16px;
+}
+.notif .close:hover {
+    cursor: pointer;
+    background-color: red;
+    color: white;
+}
+.notif img {
+    width: 2em;
+}
+@keyframes notif-in {
+    from {
+        transform: translate(-50%, -25px) scale(0.75);
+        opacity: 0;
+    }
+    to {
+        transform: translate(-50%, 0) scale(1);
+        opacity: 1;
+    }
+}
+@keyframes notif-out {
+    from {
+        transform: translate(-50%, 0) scale(1);
+        opacity: 1;
+    }
+    to {
+        transform: translate(-50%, -25px) scale(0.75);
+        opacity: 0;
+    }
 }
 
 
@@ -130,6 +198,90 @@ header {
 .nav-list-item-link:hover {
     color: var(--primary-color);
     background-color: var(--secondary-color);
+}
+
+
+/* Main Page Styles */
+.call-to-action {
+    left: 30px;
+    display: grid;
+    position: absolute;
+    height: max-content;
+    width: calc(250px - 2rem);
+    box-shadow: 2px 2px 8px black;
+    background-color: rgba(200,200,200,0.9);
+    grid-template-rows: max-content 20px 30px;
+    max-width: calc(95% - 2rem);
+    grid-template-columns: 1fr;
+    top: calc(50% - 40px);
+    align-items: center;
+    border-radius: 3px;
+    padding: 1rem;
+}
+.call-to-action > h3 {
+    margin: 0;
+    color: var(--secondary-color);
+    text-shadow: 0 0 3px var(--accent2-color);
+}
+.call-to-action > small {
+    display: block;
+    margin-left: 10px;
+    align-self: start;
+}
+.call-to-action > a.btn {
+    margin-bottom: 0;
+    font-size: 0.9rem;
+    position: relative;
+    padding: 0.25rem 0.5rem;
+    text-decoration: none;
+    width: max-content;
+    align-self: end;
+    margin: 0;
+}
+
+.hero-image {
+    position: relative;
+    background-image: url("/images/site-images/hero-image-scroll.jpg");
+    box-shadow: 2px 2px 10px var(--accent2-color);
+    background-attachment: local;
+    background-repeat: no-repeat;
+    background-position: 0 100%;
+    background-size: cover;
+    border-radius: 10px;
+    height: 200px;
+    z-index: 4;
+}
+.hero-image + section {
+    display: grid;
+    padding: 30px 100px 0;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto calc(200px - 50px);
+    justify-items: center;
+    align-items: center;
+    max-width: 900px;
+    grid-gap: 20px;
+    margin: 0 auto;
+}
+.hero-image + section > img {
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 2;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px var(--accent2-color);
+}
+.hero-image + section > h2 {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+.hero-image + section > p {
+    padding: 0 10px;
+    line-height: 1.7rem;
+    height: 100%;
 }
 
 
