--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,6 +17,7 @@
                     <input type="password" name="password" id="password">
                     <label for="password">Password</label>
                 </div>
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <input type="submit" value="Login">
                 <a href="/forgot-password">Forgot password?</a>
             </form>
