--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= pageTitle %></title>
+    <title>Genius Coding | <%= pageTitle %></title>
     <link rel="shortcut icon" href="/images/site-images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/main.css">
