--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -3,7 +3,7 @@
 
 <body>
     <%- include('../includes/nav.ejs') %>
-    <main class="white-background">
+    <main class="bottom-padding non-transparent-background">
         <div class="header-image"></div>
         <section class="overlap-top">
             <h2>Forgot Password</h2>
