--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,20 +6,33 @@
     <main>
         <div class="hero-image">
             <section class="call-to-action">
-                <h3>Looking to learn codding?</h3>
+                <h3>Looking to learn coding?</h3>
                 <small>Start Here, Start Now</small>
                 <a href="/signup" class="btn">Create an account</a>
             </section>
         </div>
         <section class="intro">
+            <img src="/images/site-images/genius-coding.jpg" alt="Genius Coding intro image">
             <h2>What is Genius Coding?</h2>
             <p>
                 Genius Coding is a group of people who create fun and/or helpful tutorials and
                 coding courses in a variety of coding languages. We also develope software
                 that is helpful, efficient, clean, and user-friendly.
             </p>
-            <img src="/images/site-images/genius-coding.jpg" alt="Genius Coding intro image">
         </section>
+        <section class="offered">
+            <h2>Learning with Genius Coding</h2>
+        </section>
+        <div class="last-call">
+            <div>
+                <h2>Not sure where to start?</h2>
+                <p>
+                    Take this quiz to help you choose the
+                    right course for you!
+                </p>
+                <button>Take Quiz</button>
+            </div>
+        </div>
     </main>
 
 <%- include('includes/end.ejs') %>
