--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,9 @@ h1, h2, h3, h4, h5, h6 {
 pre, code, .code {
     font-family: var(--code-font);
 }
+header, footer {
+    box-shadow: 0 0 10px var(--accent2-color);
+}
 .bigText {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 3rem;
@@ -35,7 +38,9 @@ body {
 }
 main {
     min-height: calc(100vh - 112px - 60px);
-    padding: 1rem;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 2rem 0 1rem;
 }
 img {
     max-width: 100%;
@@ -57,6 +62,7 @@ img {
     position: fixed;
     z-index: 900;
     left: 50%;
+    letter-spacing: 1px;
 }
 .notif > *:not(.close):hover {
     cursor: default;
@@ -70,8 +76,9 @@ img {
     background-color: tomato;
 }
 .notif .close {
-    padding: 0.3rem;
-    line-height: 17px;
+    box-sizing: initial;
+    padding: 0.3rem 0.35rem 0.4rem 0.45rem;
+    line-height: 16px;
     font-size: 1.74rem;
     border-radius: 20px;
     color: black;
@@ -178,6 +185,7 @@ header {
     position: sticky;
     display: grid;
     height: 60px;
+    z-index: 99;
     top: 0;
 }
 .nav-list {
@@ -201,13 +209,306 @@ header {
 }
 
 
+/* Login/Create Account Styles */
+    .bottom-padding.non-transparent-background {
+        box-shadow: 2px 2px 10px var(--primary-color);
+        background-color: var(--other-color);
+        border-radius: 10px;
+        margin-bottom: 40px;
+        position: relative;
+        margin-top: 30px;
+        overflow: hidden;
+        padding-top: 0;
+    }
+    .bottom-padding {
+        padding-bottom: 50px;
+    }
+    .header-image, .other-header-image {
+        width: 100%;
+        height: 200px;
+        background-image: url("/images/site-images/login-header-photo.jpg");
+        background-attachment: local;
+        background-position: center;
+        background-size: cover;
+    }
+    .other-header-image {
+        background-image: url("/images/site-images/account-background.jpg");
+    }
+    .other-header-image + .big-title {
+        text-shadow: 2px 2px 8px var(--accent2-color);
+        color: var(--other-color);
+        letter-spacing: 3px;
+        position: absolute;
+        text-align: center;
+        font-size: 3.5rem;
+        width: 100%;
+        top: calc(100px - 3rem/2);
+        margin: 0;
+    }
+    .overlap-top {
+        max-width: 500px;
+        min-height: 200px;
+        margin: -100px auto 0;
+        background-color: var(--other-color);
+        border: solid 1px var(--accent2-color);
+        padding-top: 0 !important;
+        padding: 1rem;
+        width: 95%;
+    }
+    .overlap-top h2 {
+        text-align: left;
+    }
+    .overlap-top > p {
+        font-family: var(--heading-font);
+    }
+    .overlap-top > form {
+        position: relative;
+        width: 100%;
+    }
+    .input-container {
+        position: relative;
+        margin-top: 30px;
+        width: 100%;
+    }
+    .input-container > label {
+        padding: 0 4px;
+        position: absolute;
+        top: calc(50% - 0.5em);
+        left: 10px;
+        transition: top 0.3s, left 0.3s;
+        font-family: var(--heading-font);
+        background-color: var(--other-color);
+    }
+    .input-container > input:focus ~ label,
+    .input-container > input:valid ~ label {
+        top: -0.6em; left: 5px;
+    }
+    input {
+        width: 100%;
+        display: block;
+        padding: 0.5rem;
+        border: solid 1px var(--accent2-color);
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    input[type="submit"], form button.btn, a.btn {
+        margin-top: 20px;
+        padding: 0.7rem;
+        width: auto;
+        border: none;
+        font-size: 1.1rem;
+        color: var(--other-color);
+        font-family: var(--heading-font);
+        background-color: var(--accent1-color);
+    }
+    input[type="submit"]:hover, .login-with:hover, form button.btn, a.btn:hover {
+        cursor: pointer;
+    }
+    .forgot-password {
+        font-family: var(--heading-font);
+        position: absolute;
+        bottom: 25px;
+        right: 0;
+    }
+    /* .or {
+        width: 100%;
+        margin-top: 40px;
+        position: relative;
+        margin-bottom: 30px;
+    }
+    .or > div {
+        left: 0;
+        height: 1px;
+        width: 100%;
+        top: calc(50%);
+        position: absolute;
+        background-color: var(--accent2-color);
+    }
+    .or > p {
+        width: 8rem;
+        margin: 0 auto;
+        text-align: center; 
+        position: relative;
+        font-family: var(--heading-font);
+        background-color: var(--other-color);
+    }
+    .external-logins {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 10px;
+    }
+    .external-logins > .login-with {
+        border: none;
+        display: grid;
+        grid-gap: 5px;
+        border-radius: 0;
+        align-items: center;
+        justify-items: center;
+        padding: 0.4rem 0.2rem;
+        grid-template-columns: 2rem auto;
+        background-color: var(--accent1-color);
+    }
+    .external-logins > .login-with:nth-of-type(3) > img {
+        background-color: #575352;
+        height: 1.1rem;
+        width: 1.1rem;
+        padding: 0.2rem;
+        border-radius: 2px;
+    }
+    .external-logins > .login-with > img {
+        height: 1.5rem;
+    }
+    .external-logins > .login-with > span {
+        font-family: Arial, Helvetica, sans-serif;
+        color: var(--other-color);
+        font-weight: bold;
+        text-align: left;
+        display: block;
+        width: 100%;
+    } */
+    #email-fp, #email-ca {
+        font-family: var(--heading-font);
+        color: var(--primary-color);
+    }
+    .input-container > .valid {
+        display: none;
+    }
+    .input-container > input:focus ~ .valid,
+    .input-container > input:valid ~ .valid {
+        position: absolute;
+        top: 0; right: 0;
+        display: block;
+        height: 32px;
+        width: 32px;
+    }
+    .valid > div {
+        position: absolute;
+        border-radius: 12%;
+        transition: all 0.1s;
+        width: calc(50% - 9px);
+        height: calc(50% - 9px);
+        transform: rotate(45deg);
+    }
+    .valid .green {
+        z-index: 2;
+        top: 9px; left: 9px;
+        background-color: var(--accent1-color);
+    }
+    .valid .yellow {
+        z-index: 1;
+        top: 9px; left: 16px;
+        background-color: var(--secondary-color);
+    }
+    .valid .gray {
+        z-index: 1;
+        top: 16px; left: 9px;
+        background-color: var(--primary-color);
+    }
+    .valid .blue {
+        z-index: 2;
+        top: 16px; left: 16px;
+        background-color: #2B22E3;
+    }
+
+
+    .valid.loading .green {
+        z-index: 2;
+        top: 9px; left: 9px;
+        background-color: var(--accent1-color);
+        animation: gear-clockwise 0.5s infinite;
+    }
+    .valid.loading .yellow {
+        z-index: 1;
+        top: 9px; left: 16px;
+        background-color: var(--secondary-color);
+        animation: gear-counterclockwise 0.5s infinite;
+    }
+    .valid.loading .gray {
+        z-index: 1;
+        top: 16px; left: 9px;
+        background-color: var(--primary-color);
+        animation: gear-counterclockwise 0.5s infinite;
+    }
+    .valid.loading .blue {
+        z-index: 2;
+        top: 16px; left: 16px;
+        background-color: #2B22E3;
+        animation: gear-clockwise 0.5s infinite;
+    }
+
+
+    .valid.true {
+        transform: rotate(360deg);
+        transition: transform 0.5s;
+    }
+    .valid.true > div {
+        transition: all 0.5s;
+        transform: scale(1.1) rotate(45deg);
+    }
+    .valid.true .green {
+        z-index: 2;
+        top: 13px; left: 15px;
+        background-color: var(--accent1-color);
+    }
+    .valid.true .yellow {
+        z-index: 1;
+        top: 13px; left: 5px;
+        background-color: var(--accent1-color);
+    }
+    .valid.true .gray {
+        z-index: 1;
+        top: 8px; left: 20px;
+        background-color: var(--accent1-color);
+    }
+    .valid.true .blue {
+        z-index: 2;
+        top: 18px; left: 10px;
+        background-color: var(--accent1-color);
+    }
+
+
+    .valid.false {
+        transform: rotate(360deg);
+        transition: transform 0.5s;
+    }
+    .valid.false > div {
+        transition: all 0.5s;
+    }
+    .valid.false .green {
+        z-index: 2;
+        top: 16px; left: 16px;
+        background-color: #FF1A00;
+        transform: rotate(45deg) scale(1.5,0.8);
+    }
+    .valid.false .yellow {
+        z-index: 1;
+        top: 16px; left: 9px;
+        background-color: #FF1A00;
+        transform: rotate(45deg) scale(0.8,1.5);
+    }
+    .valid.false .gray {
+        z-index: 1;
+        top: 9px; left: 16px;
+        background-color: #FF1A00;
+        transform: rotate(45deg) scale(0.8,1.5);
+    }
+    .valid.false .blue {
+        z-index: 2;
+        top: 9px; left: 9px;
+        background-color: #FF1A00;
+        transform: rotate(45deg) scale(1.5,0.8);
+    }
+/* Login/Create Account Styles */
+
+
 /* Main Page Styles */
+section:not(.account-container) h2 {
+    text-align: center;
+}
 .call-to-action {
     left: 30px;
     display: grid;
     position: absolute;
     height: max-content;
-    width: calc(250px - 2rem);
     box-shadow: 2px 2px 8px black;
     background-color: rgba(200,200,200,0.9);
     grid-template-rows: max-content 20px 30px;
@@ -238,7 +539,6 @@ header {
     align-self: end;
     margin: 0;
 }
-
 .hero-image {
     position: relative;
     background-image: url("/images/site-images/hero-image-scroll.jpg");
@@ -251,7 +551,7 @@ header {
     height: 200px;
     z-index: 4;
 }
-.hero-image + section {
+.intro {
     display: grid;
     padding: 30px 100px 0;
     grid-template-columns: auto auto;
@@ -262,7 +562,7 @@ header {
     grid-gap: 20px;
     margin: 0 auto;
 }
-.hero-image + section > img {
+.intro > img {
     height: 200px;
     object-fit: cover;
     object-position: center;
@@ -271,17 +571,69 @@ header {
     border-radius: 10px;
     box-shadow: 2px 2px 10px var(--accent2-color);
 }
-.hero-image + section > h2 {
+.intro > h2 {
     grid-column: 2 / span 1;
     grid-row: 1 / span 1;
     width: 100%;
     padding: 0;
     margin: 0;
 }
-.hero-image + section > p {
+.intro > p {
     padding: 0 10px;
     line-height: 1.7rem;
     height: 100%;
+}
+.last-call {
+    padding: 75px 0;
+    position: relative;
+    box-shadow: 2px 2px 10px var(--accent2-color);
+    background-image: url("/images/site-images/last-call-scroll.jpg");
+    background-position: center 0;
+    background-attachment: local;
+    background-repeat: no-repeat;
+    background-size: auto 250%;
+    border-radius: 10px;
+    margin: 30px 0 20px;
+    z-index: 4;
+}
+.last-call div {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 480px;
+    text-align: center;
+}
+.last-call h2 {
+    font-size: 2.5rem;
+    margin-top: 0;
+    margin-bottom: 0.2rem;
+    color: var(--other-color);
+}
+.last-call p {
+    font-size: 1.1rem;
+    margin-top: 0.2rem;
+    line-height: 150%;
+    color: var(--other-color);
+}
+.last-call button {
+    margin-top: 20px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: solid 1px var(--accent2-color);
+    background-color: rgba(255,255,255,0.2);
+    color: var(--other-color);
+    transition: all 0.2s;
+    outline: none;
+}
+.last-call button:hover {
+    background-color: rgba(200,200,200,0.7);
+    color: var(--accent2-color);
+    cursor: pointer;
+}
+.last-call button:active {
+    transform: scale(0.85);
+    transition: none;
 }
 
 
