--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,18 +3,18 @@
 
 <body>
     <%- include('../includes/nav.ejs') %>
-    <main class="white-background">
+    <main class="bottom-padding non-transparent-background">
         <div class="header-image"></div>
         <section class="overlap-top">
             <p class="prompt">Already have an account? <a href="/login">Login now</a>.</p>
             <h2>Create Account</h2>
             <form action="/signup" method="post">
                 <div class="input-container">
-                    <input type="text" name="email" id="email">
+                    <input type="text" name="email" id="email" required>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-container">
-                    <input type="text" name="username" id="username">
+                    <input type="text" name="username" id="username" required>
                     <label for="username">Username</label>
                     <div class="valid">
                         <div class="green"></div>
@@ -24,19 +24,19 @@
                     </div>
                 </div>
                 <div class="input-container">
-                    <input type="text" name="firstname" id="firstname">
+                    <input type="text" name="firstname" id="firstname" required>
                     <label for="firstname">First Name</label>
                 </div>
                 <div class="input-container">
-                    <input type="text" name="lastname" id="lastname">
+                    <input type="text" name="lastname" id="lastname" required>
                     <label for="lastname">Last Name</label>
                 </div>
                 <div class="input-container">
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" required>
                     <label for="password">Password</label>
                 </div>
                 <div class="input-container">
-                    <input type="password" name="confirm-password" id="confirm-password">
+                    <input type="password" name="confirm-password" id="confirm-password" required>
                     <label for="confirm-password">Confirm Password</label>
                     <div class="valid">
                         <div class="green"></div>
