--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -3,7 +3,7 @@
 
 <body>
     <%- include('../includes/nav.ejs') %>
-    <main class="bottom-padding non-transparent-background">
+    <main class="non-transparent-background">
         <div class="header-image"></div>
         <section class="overlap-top">
             <h2>Forgot Password</h2>
@@ -13,7 +13,8 @@
                     <input type="text" name="email" id="email">
                     <label for="email">Email</label>
                 </div>
-                <input type="submit" value="Login">
+                <%- include('../includes/csrf-token.ejs') %>
+                <input type="submit" value="Submit">
                 <p class="prompt">Remember your password? <a href="/login">Login now</a>.</p>
             </form>
             <!-- Add external logins? -->
