--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -3,6 +3,7 @@
         <div class="footer-section-left">
             <div class="footer-copyright">©2022 Genius Coding</div>
             <a class="footer-link" href="/legal/privacy-policy">Privacy Policy</a>
+            <a class="footer-link" href="/legal/credits">Credits</a>
         </div>
         <div class="footer-section-right">
             <a class="footer-social-link" title="Follow us on GitHub" href="https://github.com/GeniusCoding">
