--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -24,7 +24,7 @@
 <% if (message) { %>
     <div class="notif <%= message?.type %>">
         <img src="/images/site-images/notif-<%= message?.type %>.png" alt="<%= message?.type %> notification icon">
-        <span><%= message?.content %></span>
+        <span><%- message?.content %></span>
         <span class="close">×</span>
     </div>
 <% } %>
