--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,7 +10,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 pre, code, .code {
+  padding: 0.75rem;
   font-family: "Fira Code", monospace;
+  background-color: gray;
+  overflow-x: auto;
+}
+pre span, code span, .code span {
+  font-family: inherit;
 }
 
 header, footer {
@@ -1035,31 +1041,47 @@ section:not(.account-container) h2 {
 .credits-flex {
   display: flex;
   flex-wrap: wrap;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  justify-content: space-around;
 }
 .credits-flex h1 {
   width: 100%;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
+}
+.credits-flex h2 {
+  margin-top: 0;
+  width: 100%;
 }
 .credits-flex .credit {
-  width: 100%;
   display: grid;
   align-items: center;
-  grid-template-columns: 100px auto;
+  grid-template-columns: 80px auto;
   background-color: #FEFEFE;
   box-shadow: 2px 2px 8px #202020;
-  column-gap: 0.75rem;
   border-radius: 10px;
-  max-width: 300px;
+  width: max-content;
   overflow: hidden;
+  height: 80px;
+  width: 270px;
+}
+.credits-flex .credit > a {
+  width: 80px;
+  height: 80px;
 }
 .credits-flex .credit img {
-  width: 100%;
-  height: 100%;
+  width: 80px;
+  height: 80px;
   object-fit: cover;
   object-position: center;
 }
 .credits-flex .credit span {
-  font-size: 1.3rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 1.2rem;
+  padding: 0 1rem;
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
