--- a/public/scss/legal.scss
+++ b/public/scss/legal.scss
@@ -1,33 +1,51 @@
 @use 'variables' as *;
 
+$ci-dim: 80px;
+
 .credits-flex {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    justify-content: space-around;
 
     h1 {
         width: 100%;
-        padding-bottom: 1rem;
+        padding-bottom: 0.5rem;
+    }
+    h2 {
+        margin-top: 0;
+        width: 100%;
     }
     .credit {
-        width: 100%;
         display: grid;
         align-items: center;
-        grid-template-columns: 100px auto;
+        grid-template-columns: $ci-dim auto;
         background-color: $other-color;
         @include box-shadow;
-        column-gap: 0.75rem;
         border-radius: 10px;
-        max-width: 300px;
+        width: max-content;
         overflow: hidden;
+        height: $ci-dim;
+        width: 270px;
 
+        & > a {
+            width: $ci-dim;
+            height: $ci-dim;
+        }
         img {
-            width: 100%;
-            height: 100%;
+            width: $ci-dim;
+            height: $ci-dim;
             object-fit: cover;
             object-position: center;
         }
         span {
-            font-size: 1.3rem;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-size: 1.2rem;
+            padding: 0 1rem;
+            width: 100%;
         }
     }
 }
