--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -6,4 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genius Coding | <%= pageTitle %></title>
     <link rel="shortcut icon" href="/images/site-images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/atom-one-dark-reasonable.min.css">
     <link rel="stylesheet" href="/css/main.css">
