--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Gafata&family=Play:wght@700&family=Play:wght@300&family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gafata&family=Play:wght@700&family=Play:wght@300&family=Press+Start+2P&display=swap');
 
 $primary-color: #676767;
 $secondary-color: #FFFF64;
@@ -8,7 +8,7 @@ $other-color: #FEFEFE;
 $card-color: #F0F0F0;
 $heading-font: 'Play', arial bold, sans-serif;
 $paragraph-font: 'Gafata', arial, sans-serif;
-$code-font: 'Fira Code', monospace;
+$code-font: monospace;
 
 $color-html: #E34E24;
 $color-css: #1173BC;
