--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,6 +6,7 @@
 @use 'anonymous-homepage';
 @use 'user-homepage';
 @use 'input-validation-icon';
+@use 'forum';
 @use 'learn';
 @use 'card';
 @use 'logo';
