--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -3,22 +3,24 @@
 
 <body>
     <%- include('../includes/nav.ejs') %>
-    <main class="non-transparent-background">
-        <div class="header-image"></div>
-        <section class="overlap-top">
-            <h2>Forgot Password</h2>
-            <p>Enter the email that is linked to your account</p>
-            <form action="/forgot-password" method="post">
-                <div class="input-container">
-                    <input type="text" name="email" id="email">
-                    <label for="email">Email</label>
-                </div>
-                <%- include('../includes/csrf-token.ejs') %>
-                <input type="submit" value="Submit">
-                <p class="prompt">Remember your password? <a href="/login">Login now</a>.</p>
-            </form>
-            <!-- Add external logins? -->
-        </section>
+    <main>
+        <div class="non-transparent-background">
+            <div class="header-image"></div>
+            <section class="overlap-top">
+                <h2>Forgot Password</h2>
+                <p>Enter the email that is linked to your account</p>
+                <form action="/forgot-password" method="post">
+                    <div class="input-container">
+                        <input type="text" name="email" id="email">
+                        <label for="email">Email</label>
+                    </div>
+                    <%- include('../includes/csrf-token.ejs') %>
+                    <input type="submit" value="Submit">
+                    <p class="prompt">Remember your password? <a href="/login">Login now</a>.</p>
+                </form>
+                <!-- Add external logins? -->
+            </section>
+        </div>
     </main>
 
 <%- include('../includes/end.ejs') %>
