--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,13 +9,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Play", arial bold, sans-serif;
 }
 
-.ace_editor {
-  min-height: 300px;
-}
-.ace_editor * {
-  font-family: monospace;
-}
-
 pre, code, .code {
   padding: 0.75rem;
   font-family: monospace;
@@ -53,6 +46,16 @@ pre.line-numbers span.line::before {
   text-align: right;
   font-size: 1rem;
   width: 30px;
+}
+
+.ace-editor {
+  margin: 1rem auto;
+  width: 90%;
+  font-size: 0.9rem;
+  min-height: 400px;
+}
+.ace-editor * {
+  font-family: monospace;
 }
 
 header, footer {
@@ -221,22 +224,35 @@ img {
 .input-container label:not(.input-help) {
   padding: 0 4px;
   position: absolute;
-  top: calc(50% - 0.5em);
+  top: calc(16.5px - 0.6em);
   left: 10px;
   transition: top 0.3s, left 0.3s;
   font-family: "Play", arial bold, sans-serif;
   background-color: #FEFEFE;
+  pointer-events: none;
+}
+.input-container textarea {
+  resize: vertical;
+  height: 66px;
+}
+.input-container select {
+  height: 33px;
 }
 .input-container input:focus ~ label:not(.input-help),
-.input-container input:valid ~ label:not(.input-help) {
+.input-container input:valid ~ label:not(.input-help),
+.input-container select:valid ~ label:not(.input-help),
+.input-container textarea:focus ~ label:not(.input-help),
+.input-container textarea:valid ~ label:not(.input-help) {
   top: -0.6em;
   left: 5px;
 }
-.input-container input:focus ~ label.input-help {
+.input-container input:focus ~ label.input-help,
+.input-container select:focus ~ label.input-help,
+.input-container textarea:focus ~ label.input-help {
   display: block;
 }
 
-input {
+input, select, textarea {
   width: 100%;
   display: block;
   padding: 0.5rem;
@@ -877,6 +893,88 @@ section:not(.account-container) h2 {
   width: 32px;
 }
 
+.forum {
+  margin: 1.5rem auto;
+  width: 95%;
+  background-color: #FEFEFE;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px #202020;
+}
+.forum h3 {
+  margin-top: 0;
+}
+.forum p {
+  margin-bottom: 0;
+}
+.forum .message {
+  display: grid;
+  grid-template-rows: 1.5rem auto;
+  grid-template-columns: 40px auto;
+  border: 1px solid #676767;
+  border-radius: 10px;
+  margin: 1rem 0.5rem;
+  padding: 0.75rem;
+}
+.forum .message h4, .forum .message p {
+  margin: 0;
+}
+.forum .message h4 {
+  grid-row: 1;
+}
+.forum .message p {
+  grid-row: 2;
+}
+.forum .message span.date {
+  font-weight: normal;
+  font-size: 0.9rem;
+  transform: translate(2px, -2px);
+  display: inline-block;
+}
+.forum .message .votes {
+  display: grid;
+  grid-template-rows: 16px 22px 18px;
+  grid-column: 1;
+  grid-row: 1/span 2;
+  justify-items: center;
+  align-items: center;
+}
+.forum .message .votes button.up {
+  width: 0;
+  height: 0;
+  padding: 0;
+  background: none;
+  border: solid 0.6rem transparent;
+  border-bottom-color: #676767;
+  margin-bottom: 5px;
+}
+.forum .message .votes button.up.activated {
+  border-bottom-color: #10D15A;
+}
+.forum .message .votes button.up:hover {
+  border-bottom-color: #a7a7a7;
+}
+.forum .message .votes .numVotes {
+  text-align: center;
+  font-weight: bold;
+}
+.forum .message .votes button.flag {
+  border: none;
+  width: 0.7rem;
+  background-image: linear-gradient(#676767 55%, #FEFEFE 55%);
+  border-left: 2px solid #676767;
+  height: 0.85rem;
+  padding: 0;
+}
+.forum .message .votes button.flag.activated {
+  background-image: linear-gradient(#E34E24 55%, #FEFEFE 55%);
+  border-left-color: #E34E24;
+}
+.forum .message .votes button.flag:hover {
+  background-image: linear-gradient(#a7a7a7 55%, #FEFEFE 55%);
+  border-left-color: #a7a7a7;
+}
+
 .mission-statement {
   width: 100%;
   padding: 5px 0 30px;
@@ -919,6 +1017,119 @@ section:not(.account-container) h2 {
 .great-idea p {
   font-size: 0.9rem;
   text-align: center;
+}
+
+.code-playground {
+  display: grid;
+  grid-template-columns: 1fr 400px;
+  grid-template-rows: 3rem;
+  align-items: center;
+  row-gap: 0.5rem;
+}
+.code-playground h2, .code-playground h3 {
+  margin: 0;
+}
+.code-playground .project-title {
+  margin-left: 1.5rem;
+}
+.code-playground .layout-options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.5rem;
+  padding-top: 10px;
+}
+.code-playground .layout-options button {
+  row-gap: 3px;
+  column-gap: 3px;
+  background: none;
+  display: grid;
+  border: none;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+.code-playground .layout-options button div {
+  background-color: #676767;
+  border-radius: 2px;
+  height: 100%;
+  width: 100%;
+}
+.code-playground .layout-options button.stacked {
+  grid-template-rows: 1fr 1fr;
+}
+.code-playground .layout-options button.stacked div {
+  height: 10px;
+}
+.code-playground .layout-options button.side-by-side {
+  grid-template-columns: 1fr 1fr;
+}
+.code-playground .layout-options button.side-by-side div {
+  width: 10px;
+}
+.code-playground .layout-options button:hover {
+  background-color: rgba(255, 255, 255, 0.7) !important;
+  cursor: pointer;
+}
+.code-playground .layout-options button:hover div {
+  background-color: #343434;
+}
+.code-playground .layout-options button:active {
+  transform: scale(0.9);
+}
+.code-playground .ace-editor {
+  width: 100%;
+  margin: 0;
+}
+.code-playground .live-demo {
+  width: 100%;
+  height: 400px;
+  border: solid 1px #676767;
+  background-color: #FEFEFE;
+}
+.code-playground.side-by-side .ace-editor {
+  grid-column: 1;
+}
+.code-playground.side-by-side .live-demo {
+  grid-column: 2;
+}
+.code-playground.side-by-side .layout-options button.side-by-side {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.code-playground.stacked .ace-editor, .code-playground.stacked .live-demo {
+  grid-column: 1/-1;
+}
+.code-playground.stacked .layout-options button.stacked {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+@media screen and (max-width: 1000px) {
+  .code-playground {
+    margin: 1.5rem auto 0;
+    width: 95%;
+  }
+}
+
+.language-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem 0.5rem;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+.language-list a {
+  display: block;
+  width: max-content;
+  text-align: center;
+  text-decoration: none;
+  background-color: rgba(103, 103, 103, 0.5);
+  border-radius: 5px;
+  min-width: 75px;
+  padding: 1rem;
+  color: #FEFEFE;
+}
+.language-list a:hover {
+  background-color: rgba(103, 103, 103, 0.8);
 }
 
 .card {
@@ -1162,6 +1373,10 @@ section:not(.account-container) h2 {
   font-size: 1.2rem;
   padding: 0 1rem;
   width: 100%;
+}
+
+.privacy-policy {
+  padding: 1.5rem;
 }
 
 /*# sourceMappingURL=main.css.map */
