--- a/public/scss/learn.scss
+++ b/public/scss/learn.scss
@@ -47,3 +47,125 @@
         text-align: center;
     }
 }
+
+
+.code-playground {
+    display: grid;
+    grid-template-columns: 1fr 400px;
+    grid-template-rows: 3rem;
+    align-items: center;
+    row-gap: 0.5rem;
+    h2, h3 {
+        margin: 0;
+    }
+    
+    .project-title {
+        margin-left: 1.5rem;
+    }
+    .layout-options {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 0.5rem;
+        padding-top: 10px;
+        
+        button {
+            row-gap: 3px;
+            column-gap: 3px;
+            background: none;
+            display: grid;
+            border: none;
+            height: 40px;
+            width: 40px;
+            padding: 0.5rem;
+            border-radius: 5px;
+    
+            div {
+                background-color: $primary-color;
+                border-radius: 2px;
+                height: 100%;
+                width: 100%;
+            }
+    
+            &.stacked {
+                grid-template-rows: 1fr 1fr;
+                div { height: 10px; }
+            }
+            &.side-by-side {
+                grid-template-columns: 1fr 1fr;
+                div { width: 10px; }
+            }
+            &:hover {
+                background-color: rgba(255,255,255,0.7) !important;
+                div {
+                    background-color: darken($primary-color, 20);
+                }
+                cursor: pointer;
+            }
+            &:active {
+                transform: scale(0.9);
+            }
+        }
+    }
+    .ace-editor {
+        width: 100%;
+        margin: 0;
+    }
+
+    .live-demo {
+        width: 100%;
+        height: 400px;
+        border: solid 1px $primary-color;
+        background-color: $other-color;
+    }
+
+    &.side-by-side {
+        .ace-editor {
+            grid-column: 1;
+        }
+        .live-demo {
+            grid-column: 2;
+        }
+        .layout-options button.side-by-side {
+            background-color: rgba(255, 255, 255, 0.5);
+        }
+    }
+    &.stacked {
+        .ace-editor, .live-demo {
+            grid-column: 1 / -1;
+        }
+        .layout-options button.stacked {
+            background-color: rgba(255, 255, 255, 0.5);
+        }
+    }
+
+    @media screen and (max-width: 1000px) {
+        margin: 1.5rem auto 0;
+        width: 95%;
+    }
+}
+
+
+.language-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem 0.5rem;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+
+    a {
+        display: block;
+        width: max-content;
+        text-align: center;
+        text-decoration: none;
+        background-color: rgba($primary-color, 0.5);
+        border-radius: 5px;
+        min-width: 75px;
+        padding: 1rem;
+        color: $other-color;
+
+        &:hover {
+            background-color: rgba($primary-color, 0.8);
+        }
+    }
+}
