--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,69 +3,71 @@
 
 <body>
     <%- include('../includes/nav.ejs') %>
-    <main class="non-transparent-background">
-        <div class="header-image"></div>
-        <section class="overlap-top">
-            <p class="prompt">Already have an account? <a href="/login">Login now</a>.</p>
-            <h2>Create Account</h2>
-            <form action="/signup" method="post">
-                <div class="input-container">
-                    <input type="text" name="email" id="email" value="<%= previous?.email %>" required>
-                    <label for="email">Email</label>
-                </div>
-                <div class="input-container">
-                    <input type="text" name="username" id="username" value="<%= previous?.username %>" onkeydown="CheckValue(this)" oninput="LoadPerCharacter(true, this)" required>
-                    <label for="username">Username</label>
-                    <div class="valid">
-                        <div class="green"></div>
-                        <div class="yellow"></div>
-                        <div class="gray"></div>
-                        <div class="blue"></div>
+    <main>
+        <div class="non-transparent-background">
+            <div class="header-image"></div>
+            <section class="overlap-top">
+                <p class="prompt">Already have an account? <a href="/login">Login now</a>.</p>
+                <h2>Create Account</h2>
+                <form action="/signup" method="post">
+                    <div class="input-container">
+                        <input type="text" name="email" id="email" value="<%= previous?.email %>" required>
+                        <label for="email">Email</label>
                     </div>
-                    <label class="input-help">
-                        Creating a username
-                        <ul>
-                            <li id="username-rule-1" class="needs-work">Must be 4 characters or longer</li>
-                            <li id="username-rule-2" class="needs-work">Must be only letters and numbers</li>
-                            <li id="username-rule-3" class="needs-work">Must start with a letter</li>
-                        </ul>
-                    </label>
-                </div>
-                <div class="input-container">
-                    <input type="text" name="firstname" id="firstname" value="<%= previous?.firstname %>" required>
-                    <label for="firstname">First Name</label>
-                </div>
-                <div class="input-container">
-                    <input type="text" name="lastname" id="lastname" value="<%= previous?.lastname %>" required>
-                    <label for="lastname">Last Name</label>
-                </div>
-                <div class="input-container">
-                    <input type="password" name="password" id="password" required>
-                    <label for="password">Password</label>
-                    <label class="input-help">
-                        Creating a password
-                        <ul>
-                            <li id="password-rule-1" class="needs-work">Must be longer than 8 characters</li>
-                            <li id="password-rule-2" class="meets-requirements">Cannot be longer than 100 characters</li>
-                            <li id="password-rule-3" class="needs-work">Must be only letters, numbers, "-", and "_"</li>
-                        </ul>
-                    </label>
-                </div>
-                <div class="input-container">
-                    <input type="password" name="confirm-password" id="confirm-password" onkeydown="CheckValue(this)" oninput="LoadPerCharacter(true, this)" required>
-                    <label for="confirm-password">Confirm Password</label>
-                    <div class="valid">
-                        <div class="green"></div>
-                        <div class="yellow"></div>
-                        <div class="gray"></div>
-                        <div class="blue"></div>
+                    <div class="input-container">
+                        <input type="text" name="username" id="username" value="<%= previous?.username %>" required>
+                        <label for="username">Username</label>
+                        <div class="valid">
+                            <div class="green"></div>
+                            <div class="yellow"></div>
+                            <div class="gray"></div>
+                            <div class="blue"></div>
+                        </div>
+                        <label class="input-help">
+                            Creating a username
+                            <ul>
+                                <li id="username-rule-1" class="needs-work">Must be 4 characters or longer</li>
+                                <li id="username-rule-2" class="needs-work">Must be only letters and numbers</li>
+                                <li id="username-rule-3" class="needs-work">Must start with a letter</li>
+                            </ul>
+                        </label>
                     </div>
-                </div>
-                <%- include('../includes/csrf-token.ejs') %>
-                <input type="submit" value="Create Account">
-            </form>
-            <!-- Add external sign ups? -->
-        </section>
+                    <div class="input-container">
+                        <input type="text" name="firstname" id="firstname" value="<%= previous?.firstname %>" required>
+                        <label for="firstname">First Name</label>
+                    </div>
+                    <div class="input-container">
+                        <input type="text" name="lastname" id="lastname" value="<%= previous?.lastname %>" required>
+                        <label for="lastname">Last Name</label>
+                    </div>
+                    <div class="input-container">
+                        <input type="password" name="password" id="password" required>
+                        <label for="password">Password</label>
+                        <label class="input-help">
+                            Creating a password
+                            <ul>
+                                <li id="password-rule-1" class="needs-work">Must be longer than 8 characters</li>
+                                <li id="password-rule-2" class="meets-requirements">Cannot be longer than 100 characters</li>
+                                <li id="password-rule-3" class="needs-work">Must be only letters, numbers, "-", and "_"</li>
+                            </ul>
+                        </label>
+                    </div>
+                    <div class="input-container">
+                        <input type="password" name="confirm-password" id="confirm-password" required>
+                        <label for="confirm-password">Confirm Password</label>
+                        <div class="valid">
+                            <div class="green"></div>
+                            <div class="yellow"></div>
+                            <div class="gray"></div>
+                            <div class="blue"></div>
+                        </div>
+                    </div>
+                    <%- include('../includes/csrf-token.ejs') %>
+                    <input type="submit" value="Create Account">
+                </form>
+                <!-- Add external sign ups? -->
+            </section>
+        </div>
     </main>
 
 <%- include('../includes/end.ejs') %>
