--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -14,7 +14,7 @@
             <% if (links.length > 0) { %>
                 <% links.forEach((link) => { %>
                     <li class="nav-list-item">
-                        <a class="nav-list-item-link <%= path === link.href ? 'active' : '' %>" data-temp="<%= path %>" href="<%= link.href %>"><%= link.text %></a>
+                        <a class="nav-list-item-link <%= (link.href === '/' ? (link.href === path ? 'active' : '') : (path.includes(link.href) ? 'active' : '')) %>" data-temp="<%= path %>" href="<%= link.href %>"><%= link.text %></a>
                     </li>
                 <% }) %>
             <% } %>
