--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -8,3 +8,4 @@
     <link rel="shortcut icon" href="/images/site-images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/<%= editorTheme %>.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/pre-load-functions.js"></script>
