--- a/views/includes/user-home.ejs
+++ b/views/includes/user-home.ejs
@@ -43,7 +43,7 @@
             </section>
             <section class="user-widget">
                 <h2>User Widget</h2>
-                <p>This is a template</p>
+                <p><a href="/code/project">User project</a></p>
             </section>
         </div>
     </div>
