--- a/views/learn/learn-home.ejs
+++ b/views/learn/learn-home.ejs
@@ -15,6 +15,11 @@
             <h2>Got a Great Idea?</h2>
             <p>If you have a great idea for a tutorial or a new course, please send us your suggestion <a href="suggest-or-request-form.html" onclick="OpenLink(this)">here</a>.</p>
         </div>
+
+        <pre>let test = "This is a test";
+function Test() {
+    console.log(test);
+}</pre>
     </main>
 
 <%- include('../includes/end.ejs') %>
