--- a/public/scss/forum.scss
+++ b/public/scss/forum.scss
@@ -17,7 +17,7 @@
 
     .message {
         display: grid;
-        grid-template-rows: 1.5rem auto;
+        grid-template-rows: 1.5rem auto 1.5rem;
         grid-template-columns: 40px auto;
         border: 1px solid $primary-color;
         border-radius: 10px;
@@ -41,11 +41,12 @@
         }
         .votes {
             display: grid;
-            grid-template-rows: 16px 22px 18px;
+            grid-template-rows: 1.25rem 2rem 1.5rem;
             grid-column: 1;
-            grid-row: 1 / span 2;
+            grid-row: 1 / -1;
             justify-items: center;
             align-items: center;
+            align-self: center;
 
             button.up {
                 width: 0;
@@ -67,6 +68,38 @@
                 text-align: center;
                 font-weight: bold;
             }
+            button.down {
+                width: 0;
+                height: 0;
+                padding: 0;
+                background: none;
+                border: solid 0.6rem transparent;
+                border-top-color: $primary-color;
+                margin-top: 5px;
+
+                &.activated {
+                    border-top-color: red;
+                }
+                &:hover {
+                    border-top-color: lighten($primary-color, 25);
+                }
+            }
+        }
+        .replyTo {
+            display: flex;
+            column-gap: 0.5rem;
+            margin-left: 0.5rem;
+            grid-column: 2;
+            align-items: center;
+
+            a {
+                color: $primary-color;
+                text-decoration: none;
+                font-weight: bold;
+            }
+        }
+        .options {
+
             button.flag {
                 border: none;
                 width: 0.7rem;
