--- a/public/scss/learn.scss
+++ b/public/scss/learn.scss
@@ -140,7 +140,7 @@
     }
 
     @media screen and (max-width: 1000px) {
-        margin: 1.5rem auto 0;
+        margin: 1.5rem auto;
         width: 95%;
     }
 }
