--- a/public/scss/learn.scss
+++ b/public/scss/learn.scss
@@ -54,7 +54,7 @@
     grid-template-columns: 1fr 400px;
     grid-template-rows: 3rem;
     align-items: center;
-    row-gap: 0.5rem;
+    // row-gap: 0.5rem;
     h2, h3 {
         margin: 0;
     }
@@ -67,7 +67,7 @@
         align-items: center;
         justify-content: center;
         column-gap: 0.5rem;
-        padding-top: 10px;
+        padding: 10px 0 1rem;
         
         button {
             row-gap: 3px;
@@ -110,19 +110,46 @@
     .ace-editor {
         width: 100%;
         margin: 0;
+
+        .ace_print-margin {
+            display: none;
+        }
     }
 
     .live-demo {
         width: 100%;
         height: 400px;
         border: solid 1px $primary-color;
+        border-bottom: none;
         background-color: $other-color;
+
+        iframe {
+            border: none;
+            height: 100%;
+            width: 100%;
+            background-color: lighten($primary-color, 50);
+        }
     }
 
     .playground-footer {
         background-color: lighten($primary-color, 20);
         grid-column: 1 / -1;
         width: 100%;
+        display: grid;
+        grid-template-columns: auto 200px;
+        padding: 0.5rem;
+        border: solid 1px $primary-color;
+
+        .action-buttons {
+            grid-column: 2;
+            justify-self: end;
+            display: flex;
+            column-gap: 0.5rem;
+
+            * {
+                margin: 0;
+            }
+        }
     }
 
     &.side-by-side {
@@ -132,8 +159,10 @@
         .live-demo {
             grid-column: 2;
         }
-        .layout-options button.side-by-side {
-            background-color: rgba(255, 255, 255, 0.5);
+        @media screen and (min-width: 951px) {
+            .layout-options button.side-by-side {
+                background-color: rgba(255, 255, 255, 0.5);
+            }
         }
     }
     &.stacked {
@@ -142,6 +171,14 @@
         }
         .layout-options button.stacked {
             background-color: rgba(255, 255, 255, 0.5);
+        }
+    }
+    @media screen and (max-width: 950px) {
+        .ace-editor, .live-demo {
+            grid-column: 1 / -1 !important;
+        }
+        .layout-options button.stacked {
+            background-color: rgba(255, 255, 255, 0.5) !important;
         }
     }
 
