a waypoint just in case I mess something up

--- a/views/learn/coding/playground.ejs
+++ b/views/learn/coding/playground.ejs
@@ -4,31 +4,7 @@
 <body>
     <%- include('../../includes/nav.ejs') %>
     <main>
-        <div class="code-playground side-by-side">
-            <h2 class="project-title">New Project</h2>
-            <div class="layout-options">
-                <h3>Layout:</h3>
-                <button class="side-by-side">
-                    <div></div>
-                    <div></div>
-                </button>
-                <button class="stacked">
-                    <div></div>
-                    <div></div>
-                </button>
-            </div>
-            <div class="ace-editor" data-language="<%= programmingLanguage %>"></div>
-            <div class="live-demo">
-                <iframe src=""></iframe>
-            </div>
-            <div class="playground-footer">
-                <div class="action-buttons">
-                    <button class="run btn">Run</button>
-                    <button class="save btn">Save</button>
-                </div>
-            </div>
-            <%- include('../../includes/csrf-token.ejs') %>
-        </div>
+        <%- include('../../includes/code-project.ejs') %>
     </main>
 
 <%- include('../../includes/end.ejs') %>
