--- a/views/learn/coding/project.ejs
+++ b/views/learn/coding/project.ejs
@@ -4,22 +4,7 @@
 <body>
     <%- include('../../includes/nav.ejs') %>
     <main>
-        <div class="code-playground side-by-side">
-            <h2 class="project-title">New Project</h2>
-            <div class="layout-options">
-                <h3>Layout:</h3>
-                <button class="side-by-side">
-                    <div></div>
-                    <div></div>
-                </button>
-                <button class="stacked">
-                    <div></div>
-                    <div></div>
-                </button>
-            </div>
-            <div class="ace-editor" data-language="<%= programmingLanguage %>"><%= projectCode %></div>
-            <div class="live-demo"></div>
-        </div>
+        <%- include('../../includes/code-project.ejs') %>
 
         <%- include('../../includes/forum.ejs') %>
     </main>
